--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@ __pycache__/
 # C extensions
 *.so
 
+# Compressed
+*.zip
+*.7z
+*.7zip
+*.gz
+*.bz
+*.bzip2
+*.tar
+*.tgz
+*.tbz
+*.xz
+
 # Distribution / packaging
 .Python
 build/
